<resources>
    <string name="app_name">Maksys</string>
    <string name="login">Login</string>
    <string name="loginCapital">LOGIN</string>
    <string name="forgotpasswordqst">Forgot Password?</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="customerqst">Customer?</string>
    <string name="engineerqst">Engineer?</string>
    <string name="customer">Customer</string>
    <string name="engineer">Engineer</string>
    <string name="newuserqst">New User?</string>
    <string name="loginasguest">Login As Guest</string>
    <string name="username">Username</string>
    <string name="Password">Password</string>
    <string name="mobile">Mobile</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="verify">Verify</string>
    <string name="resendcode">RESEND CODE</string>
    <string name="invalidotp">Invalid OTP</string>
    <string name="name">Name</string>
    <string name="item">Item</string>
    <string name="model">Model</string>
    <string name="description">Description</string>
    <string name="next">Next</string>
    <string name="pass">1234</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>


    <string name="customername">Customer Name</string>
    <string name="branchname">Branch Name</string>
    <string name="branchaddress">Branch Address</string>
    <string name="contactnumber">Contact Number</string>
    <string name="contactemail">Contact Email</string>
    <string name="branchid">Branch Id</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="update">Update</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main_customer">MainCustomerActivity</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change Pin</string>
    <string name="assetrequest">Asset Request</string>
    <string name="uploadimage">Upload Image(If Any)</string>
    <string name="request">Request</string>
    <string name="changepin">Change Pin</string>
    <string name="oldpin">Current Pin</string>
    <string name="newpin">New Pin</string>
    <string name="confirmpin">Confirm Pin</string>
    <string name="contactPerson">Contact Person</string>
    <string name="title_activity_settings_customer">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="aboutapp">About App</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">This is the summury of the application you can change it</string>
    <string name="app_version">3.2</string>
    <string name="title_version">Version</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.google.com</string>
    <string name="title_terms">Terms</string>
    <string name="url_terms">https://www.google.com</string>
    <string name="Device">Device</string>
    <string name="devicestatus">Device Status</string>
    <string name="Detaileddescriptio">Detailed Description</string>
    <string name="createticket">Create Ticket</string>
    <string name="salesrequest">Sales Request</string>
    <string name="Attendance">Attendance</string>
    <string name="ServiceRequestdetails">Service Request Details</string>
    <string name="issuedetails">Issue Details</string>
    <string name="Startservice">Start Service</string>
    <string name="Decline">Decline</string>
    <string-array name="devicesttuslist">

        <item>Software Issue</item>
        <item>Hardware Issue</item>
        <item>Dead</item>
        <item>Dont Know</item>
    </string-array>
    <string-array name="ticketstatus">
        <item>Pending</item>
        <item>Completed</item>
    </string-array>

    <string name="sharedPendingStatusStart">Start</string>
    <string name="sharedPendingStatusClose">Close</string>
    <string name="sharedPendingStatusCompleted">Completed</string>
    <string name="Serviceprogress">Service Progress</string>
    <string name="usedspares">Used Spares?</string>
    <string name="ticketstatus">Ticket Status</string>
    <string name="Closerequest">Request Close</string>
    <string name="ticketid">Ticket ID</string>
    <string name="sparedetails">Spare Details</string>
    <string name="Uploadfile">Upload Document</string>
    <string name="engineername">Engineer Name</string>
    <string name="address">Address</string>
    <string name="engineerid">Engineer ID</string>
    <string name="newmobile">New Mobile Number</string>
    <string name="pindescrption">You can use this pin for further login to Maksys. Remember your PIN.</string>
    <string name="reset">Reset</string>
    <string name="contactmobilenumber">Contact Mobile Number</string>
    <string name="Comment">Comment</string>
    <string name="needspares">Need Spare?</string>
    <string name="back">Back</string>
    <string name="pendingandclose">Pending And Close</string>
    <string name="completeandclose">Complete And Close</string>
    <string name="Nothanks">No Thanks</string>
    <string name="rate">Rate</string>
    <string name="notickets">No Tickets Found.</string>
    <string name="startnow">Start Now</string>
    <string name="startwork">Update Work</string>
    <string name="processing">Processing...</string>
    <string name="Ticketcode">Ticket Code</string>
    <string name="assignedon">Assigned On</string>
    <string name="Otherreason">Other Reason?</string>
    <string name="otherreasons">Other Reason</string>
    <string name="ok">Ok</string>
    <string name="specification">Specification</string>
    <string name="make">Make</string>
    <string name="reason">Reason</string>
    <string name="Generate">Generate PDF</string>
    <string name="completedon">Completed  On</string>
    <string name="createdon">Created On</string>
    <string name="Createcomment">Create Comment</string>
</resources>
