<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardBackgroundColor="@color/blueMaksys"
        app:cardElevation="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Used Spare"
            android:textStyle="bold"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textColor="@color/white"/>
    </android.support.v7.widget.CardView>

    <EditText
        android:id="@+id/et_currentticket_spare_used_spare_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:hint="@string/make"
        android:inputType="textPersonName"
        android:text="" />
    <EditText
        android:id="@+id/et_currentticket_spare_used_spare_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:hint="@string/model"
        android:inputType="textPersonName"
        android:text="" />
    <EditText
        android:id="@+id/et_currentticket_spare_used_spare_specification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:hint="@string/specification"
        android:inputType="textPersonName"
        android:text="" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="center_horizontal">
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blueMaksys"
                app:cardCornerRadius="24dp"
                app:cardElevation="8dp">

                <Button
                    android:id="@+id/btn_currentticket_spare_used_spare_cancel"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_white"
                    android:ems="15"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blueMaksys"
                app:cardCornerRadius="24dp"
                app:cardElevation="8dp">

                <Button
                    android:id="@+id/btn_currentticket_spare_used_spare_ok"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_white"
                    android:ems="15"
                    android:text="@string/ok"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
