<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ChangePin_Customer_Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/changepin"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <android.support.v7.widget.CardView
            android:id="@+id/fullcardview_add_asset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/oldpin"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_customer_old_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:inputType="number"
                    android:padding="8dp"
                    android:maxLength="6"
                    android:textSize="16sp"
                    android:windowSoftInputMode="stateUnchanged" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/newpin"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_customer_new_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:inputType="number"
                    android:padding="8dp"
                    android:maxLength="6"
                    android:textSize="16sp"
                    android:windowSoftInputMode="stateUnchanged" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:text="@string/confirmpin"
                    android:textColor="@color/grey"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_customer_confirm_pin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="15"
                    android:inputType="number"
                    android:padding="8dp"
                    android:maxLength="6"
                    android:textSize="16sp"
                    android:windowSoftInputMode="stateUnchanged" />





                <android.support.v7.widget.CardView
                    android:id="@+id/login_card_engineer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="@color/blueMaksys"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="8dp">

                    <Button
                        android:id="@+id/btn_customer_confirm_pin"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ripple_white"
                        android:ems="15"
                        android:text="@string/change"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        tools:ignore="OnClick" />
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>


</FrameLayout>