<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.LoginAsGuest">

    <ImageView
        android:id="@+id/top_curve"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintHeight_percent=".9"
        android:layout_marginStart="-50dp"
        android:layout_marginLeft="-50dp"
        android:layout_marginEnd="-50dp"
        android:layout_marginRight="-50dp"
        android:src="@drawable/top_shape"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/logo_loginasGuest"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="0px"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shape_round"
                android:padding="5dp"
                android:src="@drawable/maksys_logo" />

            <TextView
                android:id="@+id/login_text_engineer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/loginasguest"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <android.support.v7.widget.CardView
                android:id="@+id/fullcardview_loginasGuest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="0px"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:orientation="vertical"
                    android:paddingLeft="16dp"
                    android:paddingTop="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:id="@+id/email_text_engineer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/name_loginguest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:windowSoftInputMode="stateUnchanged" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/mobile"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/mobile_login_guest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:inputType="number"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:windowSoftInputMode="stateUnchanged" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/item"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/item_login_guest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:inputType="text"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:windowSoftInputMode="stateUnchanged" />



                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:text="@string/description"
                        android:textColor="@color/grey"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/description_login_guest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:inputType="textMultiLine"
                        android:lines="3"
                        android:padding="8dp"
                        android:textSize="16sp"
                        android:windowSoftInputMode="stateUnchanged" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/login_card_engineer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        app:cardBackgroundColor="@color/blueMaksys"
                        app:cardCornerRadius="24dp"
                        app:cardElevation="8dp">

                        <Button
                            android:id="@+id/login_button_loginguest"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/ripple_white"
                            android:ems="15"
                            android:text="@string/login"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                           />
                    </android.support.v7.widget.CardView>
                </LinearLayout>
            </android.support.v7.widget.CardView>





        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>