<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/blueMaksys">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="FeedBack"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:padding="16dp">



        <EditText
            android:id="@+id/et_feedback_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/Comment"
            android:inputType="textMultiLine"
            android:lines="3"
            android:text="" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rate Service"
            android:textSize="15dp"
            android:textStyle="bold"
            />
        <RatingBar
            android:id="@+id/ratingBar_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp"
            android:gravity="left">
            <android.support.v7.widget.CardView
                android:id="@+id/card_customer_update_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blueMaksys"
                app:cardCornerRadius="24dp"
                app:cardElevation="8dp">

                <Button
                    android:id="@+id/btn_feedback_nothanks"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_white"
                    android:ems="15"
                    android:text="@string/Nothanks"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <android.support.v7.widget.CardView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/blueMaksys"
                app:cardCornerRadius="24dp"
                app:cardElevation="8dp">

                <Button
                    android:id="@+id/btn_feedback_rate"
                    android:layout_width="130dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_white"
                    android:ems="15"
                    android:text="@string/rate"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    />
            </android.support.v7.widget.CardView>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
